채팅 내역 조회 페이징 오류 개선